cabal-version:      2.0
name:               hip-bench
version:            0.1.3.4
license:            BSD3
license-file:       LICENSE
copyright:          Copyright: (c) 2019-2020 Vanessa McHale
maintainer:         vamchale@gmail.com
author:             Vanessa McHale
synopsis:           Find duplicate images
description:        Find similar images using perceptual hashes
category:           Application, CommandLine, Images
build-type:         Simple

executable hip-bench
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    build-tool-depends: cpphs:cpphs -any
    hs-source-dirs:     .
    default-language:   Haskell2010
    ghc-options:
        -threaded -rtsopts "-with-rtsopts=-N -qg" -Wno-all
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wredundant-constraints
        -ddump-to-file -ddump-simpl -ddump-stg -ddump-cmm -ddump-to-file
                      -fproc-alignment=64 -dsuppress-all -fforce-recomp -O2
        -ticky -dno-suppress-type-signatures

    other-modules:
        Load

    build-depends:
        base -any,
        criterion -any,
        filepath -any,
        deepseq -any,
        hip -any,
        array -any,
        primitive -any
        -- repa -any,
        -- repa-algorithms -any


